conversor/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    IGUAL

Grammar

Rule 0     S' -> conversion
Rule 1     conversion -> cantidadDivisa ASTERISCO tasaCambio
Rule 2     conversion -> cantidadDivisa SLASH tasaCambio
Rule 3     cantidadDivisa -> NUMERO
Rule 4     cantidadDivisa -> ID
Rule 5     tasaCambio -> NUMERO

Terminals, with rules where they appear

ASTERISCO            : 1
ID                   : 4
IGUAL                : 
NUMERO               : 3 5
SLASH                : 2
error                : 

Nonterminals, with rules where they appear

cantidadDivisa       : 1 2
conversion           : 0
tasaCambio           : 1 2

Parsing method: LALR

state 0

    (0) S' -> . conversion
    (1) conversion -> . cantidadDivisa ASTERISCO tasaCambio
    (2) conversion -> . cantidadDivisa SLASH tasaCambio
    (3) cantidadDivisa -> . NUMERO
    (4) cantidadDivisa -> . ID

    NUMERO          shift and go to state 3
    ID              shift and go to state 4

    conversion                     shift and go to state 1
    cantidadDivisa                 shift and go to state 2

state 1

    (0) S' -> conversion .



state 2

    (1) conversion -> cantidadDivisa . ASTERISCO tasaCambio
    (2) conversion -> cantidadDivisa . SLASH tasaCambio

    ASTERISCO       shift and go to state 5
    SLASH           shift and go to state 6


state 3

    (3) cantidadDivisa -> NUMERO .

    ASTERISCO       reduce using rule 3 (cantidadDivisa -> NUMERO .)
    SLASH           reduce using rule 3 (cantidadDivisa -> NUMERO .)


state 4

    (4) cantidadDivisa -> ID .

    ASTERISCO       reduce using rule 4 (cantidadDivisa -> ID .)
    SLASH           reduce using rule 4 (cantidadDivisa -> ID .)


state 5

    (1) conversion -> cantidadDivisa ASTERISCO . tasaCambio
    (5) tasaCambio -> . NUMERO

    NUMERO          shift and go to state 8

    tasaCambio                     shift and go to state 7

state 6

    (2) conversion -> cantidadDivisa SLASH . tasaCambio
    (5) tasaCambio -> . NUMERO

    NUMERO          shift and go to state 8

    tasaCambio                     shift and go to state 9

state 7

    (1) conversion -> cantidadDivisa ASTERISCO tasaCambio .

    $end            reduce using rule 1 (conversion -> cantidadDivisa ASTERISCO tasaCambio .)


state 8

    (5) tasaCambio -> NUMERO .

    $end            reduce using rule 5 (tasaCambio -> NUMERO .)


state 9

    (2) conversion -> cantidadDivisa SLASH tasaCambio .

    $end            reduce using rule 2 (conversion -> cantidadDivisa SLASH tasaCambio .)

